--- a/guides/source/ubiquo_core.textile
+++ b/guides/source/ubiquo_core.textile
@@ -1006,6 +1006,28 @@ cache_classes in development. If you have a closed circuit of associations betwe
 you might consider also moving them to a new plugin, so that you can maintain cache_classes
 disabled for the rest of classes.
 
+h3. Configuring the locales of your Ubiquo project
+
+By default, all Ubiquo projects will use three different locales: catalan (ca), spanish (es) and english (en). When you create your Ubiquo project you can select
+the default language (english if not specified). However, you may want to use other locales, just one, or even change the default locale after the project
+creation.
+
+To set up a specific locale as the default one, you have to modify the +config/environment.rb+ file. In there you'll have to add or change a line to this one:
+
+<ruby>
+Ubiquo::Config.set(:default_locale, :en)
+</ruby>
+
+Changing +en+ for the desired locale
+
+Also, to set the available locales for your application, you'll have to add a line like this one in the same file:
+
+<ruby>
+Ubiquo::Config.set(:supported_locales, %w[es])
+</ruby>
+
+Using the array of the locales you want to be able to use in your application.
+
 
 h3. Changelog
 
