Updated for last changes in filters and helpers

--- a/guides/source/ubiquo_scaffold.textile
+++ b/guides/source/ubiquo_scaffold.textile
@@ -201,7 +201,7 @@ h5. Index
 To start, check out index action in +app/controllers/ubiquo/books_controller.rb+, we can view that this action only contains a call to +filtered_search+ Book class method. The results are used for +paginate+ method,
 implemented in ubiquo_core plugin.
 
-NOTE. The params that +filtered_search+ method needs are explained with more details in the *filters section*
+NOTE. The params that +paginated_filtered_search+ method needs are explained with more details in the *filters section*
 
 <ruby>
 
@@ -209,19 +209,8 @@ class Ubiquo::BooksController < UbiquoController
   # GET /books
   # GET /books.xml
   def index
-    order_by = params[:order_by] || 'books.id'
-    sort_order = params[:sort_order] || 'desc'
-    filters = {
-      :text => params[:filter_text],
-      :publish_start => parse_date(params[:filter_publish_start]),
-      :publish_end => parse_date(params[:filter_publish_end], :time_offset => 1.day),
-    }
-    @books_pages, @books = Book.paginate(:page => params[:page]) do
-      # remove this find and add something like this:
-      # Book.filtered_search filters, :order => "#{order_by} #{sort_order}"
-      Book.filtered_search filters, :order => "#{order_by} #{sort_order}"
-    end
-
+    @books_pages, @books = Book.paginated_filtered_search(params)
+paginated_filtered_search(params)
     respond_to do |format|
       format.html # index.html.erb
       format.xml  {
@@ -249,17 +238,14 @@ With new ubiquo version, we have reduced the code generated in index view and mo
 
   <%= render :partial => "shared/ubiquo/feedback" %>
 
-  <%= link_to t("ubiquo.book.index.new"), new_ubiquo_book_path, :class => "new" %>
-
-  <%= book_filters_info(params) %>
+  <%= show_filter_info %>
 
   <%= book_list(@books, @books_pages) %>
 
   <% content_for :sidebar do %>
-    <%= book_filters %>
-
-    <h3><%= t("ubiquo.help") %></h3>
-    <p><%= t("ubiquo.book.index.help_message") %></p>
+    <%= show_filters %>
+  
+  <%= help_block_sidebar(t("ubiquo.book.index.help_message")) %>
   <% end %>
 
 </ruby>
@@ -274,14 +260,15 @@ Required locals:
 ** *id* - The id of this element
 ** *columns* - An array with the columns values of this element
 ** *actions* - A result of actions helper method
-* *pages* - Pagination for this list.
+* *pages* - Pagination for this list
+* *link_to_new* - Link to be used as a button for creating a new model
 
 Optional locals:
 
 * *actions_width* - Width (in pixels) of the Actions column (default is 100)
 * *hide_actions* - Set to true to hide actions (default is false)
 
-The +books_actions+ method returns
+The +books_actions+ method returns an array containing all the actions that we want to perform on the instances of the models. By default those actions are *edit* and *delete*.
 
 And an example of books ubiquo helper:
 
@@ -304,7 +291,9 @@ And an example of books ubiquo helper:
               :actions => book_actions(book)
             }
           end,
-          :pages => pages
+          :pages => pages,
+          :link_to_new => link_to(t("ubiquo.book.index.new"),
+                                new_ubiquo_book_path, :class => 'new')
         })
     end
 
@@ -312,7 +301,6 @@ And an example of books ubiquo helper:
 
     def book_actions(book, options = {})
       actions = []
-      actions << link_to(t("ubiquo.view"), [:ubiquo, book])
       actions << link_to(t("ubiquo.edit"), [:edit, :ubiquo, book])
       actions << link_to(t("ubiquo.remove"), [:ubiquo, book],
         :confirm => t("ubiquo.book.index.confirm_removal"), :method => :delete
