--- a/guides/source/ubiquo_jobs.textile
+++ b/guides/source/ubiquo_jobs.textile
@@ -61,7 +61,6 @@ class ExampleJob < UbiquoJobs::Jobs::Base
 
   def do_job_work
     set_property :result_output, self.options[:set].size
-    return 0
   end
 
 end
@@ -119,13 +118,12 @@ To set a different priority from the default (low), we can set our own priority 
 Defaults are 10 for high, 100 for medium and 1000 for low priority (default).
 
 
-h4. Return code
+h4. Successful execution
 
-In +ExampleJob+ the last line is a +return 0+ statement. The Job Manager needs to know if the job has been executed correctly, and that, unless exceptions are raised, is something that every job must tell to the manager by returning an error code.
+The job manager needs to know if a job was executed successfully in order to set its new status. By default, if a job raises a standard error, it will be considered that its execution failed.
+Otherwise, if the job is executed without raising any standard error, it will be considered it was executed successfully and will be marked as finished.
 
 The property result_output is where we can put a text that will be displayed in the jobs list telling how did the process go.  When a worker takes a job, it puts itself as the +runner+ of the job, 
-
-NOTE: This might change in the future to assume that everything went fine unless an exception is raised.
 
 h3. ActiveJob
 
