--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -105,6 +105,10 @@ h3. For ubiquo developers
    This guide covers how you can manage your application translations with translate plugin
 <% end %>
 
+<% guide("Ubiquo configuration overview", 'ubiquo_configuration.html', :rdoc => false) do %>
+   This guide will guide you through the different configuration parameters you can set up in your applcations
+<% end %>
+
 </dl>
 
 h3. Upgrades
